--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,12 @@
 ---
 layout: compress
 ---
+<head>
+  {% include head.html %}
+  {% include head/custom.html %}
+
+  <meta name="robots" content="noindex,nofollow">
+</head>
 
 <!doctype html>
 <html lang="en" class="no-js">
